css/styles.css
/* ... */
/* ------------------------------- */
/* Table styles */
/* ------------------------------- */

table {
  font-size: 1.1rem;
  font-weight: 400;
  border-collapse: collapse;
  width: 100%;
}

td,
th {
  border: 1px solid #dddddd;
  text-align: left;
  padding: 8px;
  font-weight: normal;
}

tr:nth-child(even) {
  background-color: #F3E9FF;
}

/* ==================================== */

.closeout {
  display: none;
}

.horizontal-nav-index {
  display: flex;
  flex-wrap: wrap;
}

.horizontal-nav-index a {
  margin-right: 1rem;
}

/* .horizontal-flex {
  display: flex;
  flex-direction: row;
  align-items: center;
} */

/* #banner {
  width: 77vh;
} */

#sticky-description {
  /* width: 65vh; */
  padding: 0 2rem 0 0;
}

#the-sticky-div {
  position: relative;
  top: 0px;
  width: 30%;
  left: 3vw;
  padding: 16px;
}

#the-sticky-div.sticky hr.small-line {
  width: 100%;
}

/* #the-sticky-div.sticky .lockednav-links li {
  margin-bottom: 20px;
} */

#the-sticky-div.sticky .project-title {
  margin: 2rem 0;
}

.line-clamp-4 {
  /* overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4; */
  display: none;
}

.hidden-on-scroll {
  display: none;
}

/* ------------------------------- */
/* Line styles */
/* ------------------------------- */

hr {
  height: 1px;
  border: none;
  border-top: 2px solid #1B1B1B;
}

.small-line {
  width: 15%;
}

.small-locked-line {
  width: 100px;
}

.mid-line {
  width: 35%;
}

.project-title {
  margin: 7rem 0;
}

/* ==================================== */

.category {
  display: flex;
  flex-direction: column;
  margin-bottom: 3rem;
}

.category h3 {
  margin-bottom: 4px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create two equal columns that sits next to each other */
.column {
  flex: 50%;
  max-width: 50%;
  padding: 0 4px;
}

.math-box {
  background-color: #eee;
  border: 1px solid;
  margin-bottom: 24px;
  font-size: 24px;
}

.math-box p {
  text-align: center;
  font-size: 1.25rem;
}

.tag-section {
  display: flex;
  flex-wrap: wrap;
}

.tag {
  color: #000;
  background-color: #eeeeee;
  border: 1px solid #ccc;
  padding: 6px 10px;
  margin: 0 8px 16px 0;
  border-radius: 2px;
}


.caption {
  font-size: 1rem;
  color: #888;
  margin-top: 0.25rem;
  margin-bottom: 1.5rem;
  margin-left: 1rem;
}

.sub-title {
  font-size: 0.9rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  color: #555;
}

.icon-link-sm {
  font-size: 16px;
  margin-left: 5px;
  vertical-align: middle;
}

.icon-sm {
  font-size: 16px;
  vertical-align: middle;
}

/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
/* Responsive CSS */
/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */


/* ------------------------------- */
/* Responsive styles for side sticky nav */
/* ------------------------------- */


/* From 2200px and up */
@media screen and (min-width: 2200px) {
  #the-sticky-div.sticky {
    left: 64.3vw;
    position: fixed;
    top: 20px;
    width: 16%;
    height: auto;
  }

  .horizontal-nav {
    display: flex;
    margin-left: 16px;
  }

  .dropdown-nav {
    display: none;
    margin: 0 1rem;
  }
}

/* From 2000px to 2200px */
@media screen and (min-width: 2000px) and (max-width: 2199px) {
  #the-sticky-div.sticky {
    left: 66vw;
    position: fixed;
    max-width: 420px;
    top: 20px;
    height: auto;
    /* transform: translate(0%, -15%);
    transition: 0.5s all; */
  }

  .horizontal-nav {
    display: flex;
    margin-left: 16px;
  }

  .dropdown-nav {
    display: none;
    margin: 0 1rem;
  }
}

/* From 1800px to 2000px */
@media screen and (min-width: 1800px) and (max-width: 1999px) {
  #the-sticky-div.sticky {
    left: 68vw;
    width: 60%;
    max-width: 420px;
    position: fixed;
    top: 20px;
    height: auto;
    /* transform: translate(0%, -15%);
    transition: 0.5s all; */
  }

  .horizontal-nav {
    display: flex;
    margin-left: 16px;
  }

  .dropdown-nav {
    display: none;
    margin: 0 1rem;
  }
}

/* From 1400px to 1800px */
@media screen and (min-width: 1400px) and (max-width: 1799px) {
  #the-sticky-div.sticky {
  left: 71vw;
  max-width: 380px;
  position: fixed;
  top: 20px;
  height: auto;
    /* transform: translate(0%, -15%);
    transition: 0.5s all; */
  }

  .horizontal-nav {
    display: flex;
    margin-left: 16px;
  }

  .dropdown-nav {
    display: none;
    margin: 0 1rem;
  }

  .text-out {
    font-size: 2.5rem;
    max-width: 1000px;
    margin-top: 2rem;
    margin-bottom: 2rem;
  }

  .lockednav-links {
    font-size: 1.3rem;
  }

}
/* ... */

